Updated status controller and facade with support for lockout.

--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -108,6 +108,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\ApiController.cs" />
+    <Compile Include="Infrastructure\HttpRequestMessageExtensions.cs" />
     <Compile Include="Models\StatusRequest.cs" />
     <Compile Include="Models\StatusResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
