--- a/src/Web/Web.config
+++ b/src/Web/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <appSettings>
+    <add key="Repository.Strategy" value="Mock" />
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
