Added couchbase configuration to web config.

--- a/src/Web/Web.config
+++ b/src/Web/Web.config
@@ -4,9 +4,21 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <configSections>
+    <sectionGroup name="couchbaseClient">
+      <section name="couchbase" type="Couchbase.Configuration.Client.Providers.CouchbaseClientSection, Couchbase.NetClient" />
+    </sectionGroup>
+  </configSections>
   <appSettings>
-    <add key="Repository.Strategy" value="Mock" />
+    <!--add key="Repository.Strategy" value="Couchbase" /-->
   </appSettings>
+  <couchbaseClient>
+    <couchbase useSsl="false">
+      <servers>
+        <add uri="http://127.0.0.1:8091/pools" />
+      </servers>
+    </couchbase>
+  </couchbaseClient>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
